--- a/main.html
+++ b/main.html
@@ -8,8 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="calculator">
+		<div class="display" id="input" type="input"></div>
+		<div class="buttons">
+			<div class="button" id="clr">C</div>
+			<div class="button" id="divide">/</div>
+			<div class="button" id="multiply">*</div>
+			<div class="button" id="clear">&larr;</div>
+			<div class="button" id="block7">7</div>
+			<div class="button" id="block8">8</div>
+			<div class="button" id="block9">9</div>
+			<div class="button" id="minus">-</div>
+			<div class="button" id="block4">4</div>
+			<div class="button" id="block5">5</div>
+			<div class="button" id="block6">6</div>
+			<div class="button" id="plus">+</div>
+			<div class="button" id="block1">1</div>
+			<div class="button" id="block2">2</div>
+			<div class="button" id="block3">3</div>
+			<div class="button" id="dot">.</div>
+			<div class="button" id="minus">(</div>
+			<div class="button" id="minus">0</div>
+			<div class="button" id="block4">)</div>
+			<div class="button" id="ans">=</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
