--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 			<div class="button" id="block3">3</div>
 			<div class="button" id="dot">.</div>
 			<div class="button" id="minus">(</div>
-			<div class="button" id="minus">0</div>
+			<div class="button" id="block0">0</div>
 			<div class="button" id="block4">)</div>
 			<div class="button" id="ans">=</div>
 		</div>
