--- a/main.html
+++ b/main.html
@@ -9,12 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="calculator">
-		<div id="input" type="input"></div>
+		<div id="input" type="text" readonly></div>
 		<div class="buttons">
-			<div class="button" id="clear">C</div>
+			<div class="button" id="clr">C</div>
 			<div class="button" id="divide">/</div>
 			<div class="button" id="multiply">*</div>
-			<div class="button" id="clr">&larr;</div>
+			<div class="button" id="clear">&larr;</div>
 			<div class="button" id="block7">7</div>
 			<div class="button" id="block8">8</div>
 			<div class="button" id="block9">9</div>
@@ -27,9 +27,9 @@
 			<div class="button" id="block2">2</div>
 			<div class="button" id="block3">3</div>
 			<div class="button" id="dot">.</div>
-			<div class="button" id="minus">(</div>
+			<div class="button">(</div>
 			<div class="button" id="block0">0</div>
-			<div class="button" id="block4">)</div>
+			<div class="button">)</div>
 			<div class="button" id="ans">=</div>
 		</div>
 	</div>
