--- a/main.html
+++ b/main.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<title>Calculator</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
 	<div class="calculator">
-		<div id="input" type="text" readonly></div>
-		<div class="buttons">
-			<div class="button" id="clr">C</div>
-			<div class="button" id="divide">/</div>
-			<div class="button" id="multiply">*</div>
-			<div class="button" id="clear">&larr;</div>
-			<div class="button" id="block7">7</div>
-			<div class="button" id="block8">8</div>
-			<div class="button" id="block9">9</div>
-			<div class="button" id="minus">-</div>
-			<div class="button" id="block4">4</div>
-			<div class="button" id="block5">5</div>
-			<div class="button" id="block6">6</div>
-			<div class="button" id="plus">+</div>
-			<div class="button" id="block1">1</div>
-			<div class="button" id="block2">2</div>
-			<div class="button" id="block3">3</div>
-			<div class="button" id="dot">.</div>
-			<div class="button">(</div>
-			<div class="button" id="block0">0</div>
-			<div class="button">)</div>
-			<div class="button" id="ans">=</div>
-		</div>
+		<input type="text" name="display" id="input" readonly>
+		<button id="clr">C</button>
+		<button id="divide">/</button>
+		<button id="multiply">*</button>
+		<button id="clear"><=</button>
+		<button id="block7" >7</button>
+		<button id="block8">8</button>
+		<button id="block9">9</button>
+		<button id="minus">-</button>
+		<button id="block4">4</button>
+		<button id="block5">5</button>
+		<button id="block6">6</button>
+		<button id="plus">+</button>
+		<button id="block1">1</button>
+		<button id="block2">2</button>
+		<button id="block3">3</button>
+		<button id="dot">.</button>
+		<button id="start">(</button>
+		<button id="block0">0</button>
+		<button id="end">)</button>
+          <button id="ans">=</button>
 	</div>
-	<script type="text/javascript" src="./script.js">
-	</script>
-
+    <script src="./script.js"></script>
 </body>
-
 </html>
