--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Calculator</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<div class="calculator">
@@ -10,7 +10,7 @@
 		<button id="clr">C</button>
 		<button id="divide">/</button>
 		<button id="multiply">*</button>
-		<button id="clear"><=</button>
+		<button id="clear">&larr;</button>
 		<button id="block7" >7</button>
 		<button id="block8">8</button>
 		<button id="block9">9</button>
